--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,14 @@
 GameName=Psycho
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Scene/Hospital_CutScene1.Hospital_CutScene1
+GameDefaultMap=/Game/Scene/Hospital_CutScene1.Hospital_CutScene1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
-GlobalDefaultServerGameMode=None
+GlobalDefaultGameMode=/Game/Character/James2/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultServerGameMode=/Game/Character/James2/ThirdPersonGameMode.ThirdPersonGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
@@ -66,3 +66,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+
