--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F99FEF5F034192AC694512AA0D382E3E
-ProjectName=Third Person BP Game Template
+ProjectName=Dream
+CompanyName=Untitle
+Description=a tps game
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "B387C249D34B6755118836ADBF9C2452", "Dream")
 
 [StartupActions]
 bAddPacks=True
