--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,6 +29,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=True
 r.MobileHDR=True
+r.DefaultFeature.AutoExposure=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -74,5 +75,4 @@ PhysXTreeRebuildRate=10
 -PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Wood")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
-
 
