refractor camera volume, add camera rail

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,6 +31,9 @@ r.AllowStaticLighting=True
 r.MobileHDR=True
 r.DefaultFeature.AutoExposure=False
 
+[/Script/SubstanceCore.SubstanceSettings]
+MemoryBudgetMb=1024
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -75,4 +78,5 @@ PhysXTreeRebuildRate=10
 -PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Wood")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
+
 
