--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,6 +74,8 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+-PhysicalSurfaces=(Type=SurfaceType1,Name="Wood")
+-PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Wood")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
 
