fix build error

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=Psycho
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Scene/Hospital_CutScene1.Hospital_CutScene1
-GameDefaultMap=/Game/Scene/Hospital_CutScene1.Hospital_CutScene1
+EditorStartupMap=/Game/Prototype/Hospital.Hospital
+GameDefaultMap=/Game/Prototype/Hospital.Hospital
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/Character/James2/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=/Game/Character/James2/ThirdPersonGameMode.ThirdPersonGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
