--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,10 +1,52 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F99FEF5F034192AC694512AA0D382E3E
-ProjectName=Dream
-CompanyName=Untitle
+ProjectName=Exsanguine Demon
+CompanyName=Yibo Jiang
 Description=a tps game
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "B387C249D34B6755118836ADBF9C2452", "Dream")
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "B387C249D34B6755118836ADBF9C2452", "Exsanguine Demon")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="C:/Users/yibojiang/Documents/Projects/Psycho/Build")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bWarnIfPackagedWithoutNativizationFlag=True
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+DefaultCulture=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+bSkipEditorContent=False
+-MapsToCook=(FilePath="/Game/Prototype/Hospital")
+-MapsToCook=(FilePath="/Game/Prototype/Floor1")
+-MapsToCook=(FilePath="")
++MapsToCook=(FilePath="/Game/Prototype/Hospital")
++MapsToCook=(FilePath="/Game/Prototype/Floor1")
++MapsToCook=(FilePath="/Game/Prototype/Floor2")
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
+
