--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -34,6 +34,9 @@ r.DefaultFeature.AutoExposure=False
 [/Script/SubstanceCore.SubstanceSettings]
 MemoryBudgetMb=1024
 
+[/Script/Engine.RecastNavMesh]
+RuntimeGeneration=DynamicModifiersOnly
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
