--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,16 +1,6 @@
 [URL]
 GameName=Psycho
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Prototype/Hospital.Hospital
-GameDefaultMap=/Game/Prototype/Hospital.Hospital
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Script/Engine.GameMode
-GlobalDefaultServerGameMode=/Game/Character/James2/ThirdPersonGameMode.ThirdPersonGameMode_C
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
 
@@ -81,5 +71,19 @@ PhysXTreeRebuildRate=10
 -PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Wood")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Prototype/Hospital.Hospital
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/Blueprint/GameManagerInstance.GameManagerInstance_C
+GameDefaultMap=/Game/Prototype/Hospital.Hospital
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprint/AdamGameMode.AdamGameMode_C
+GlobalDefaultServerGameMode=/Game/Character/James2/ThirdPersonGameMode.ThirdPersonGameMode_C
 
 
