--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,6 +27,20 @@ MemoryBudgetMb=1024
 [/Script/Engine.RecastNavMesh]
 RuntimeGeneration=DynamicModifiersOnly
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Prototype/Hospital.Hospital
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/Blueprint/GameManagerInstance.GameManagerInstance_C
+GameDefaultMap=/Game/Prototype/Title.Title
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprint/AdamGameMode.AdamGameMode_C
+GlobalDefaultServerGameMode=/Game/Character/James2/ThirdPersonGameMode.ThirdPersonGameMode_C
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -71,19 +85,5 @@ PhysXTreeRebuildRate=10
 -PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Wood")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Prototype/Hospital.Hospital
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/Blueprint/GameManagerInstance.GameManagerInstance_C
-GameDefaultMap=/Game/Prototype/Hospital.Hospital
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprint/AdamGameMode.AdamGameMode_C
-GlobalDefaultServerGameMode=/Game/Character/James2/ThirdPersonGameMode.ThirdPersonGameMode_C
 
 
