--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -42,10 +42,12 @@ bEncryptPakIndex=False
 bSkipEditorContent=False
 -MapsToCook=(FilePath="/Game/Prototype/Hospital")
 -MapsToCook=(FilePath="/Game/Prototype/Floor1")
+-MapsToCook=(FilePath="/Game/Prototype/Floor2")
 -MapsToCook=(FilePath="")
 +MapsToCook=(FilePath="/Game/Prototype/Hospital")
 +MapsToCook=(FilePath="/Game/Prototype/Floor1")
 +MapsToCook=(FilePath="/Game/Prototype/Floor2")
++MapsToCook=(FilePath="/Game/Prototype/Title")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
