--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -39,7 +39,7 @@ GameInstanceClass=/Game/Blueprint/GameManagerInstance.GameManagerInstance_C
 GameDefaultMap=/Game/Prototype/Title.Title
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprint/AdamGameMode.AdamGameMode_C
-GlobalDefaultServerGameMode=/Game/Character/James2/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultServerGameMode=/Game/Blueprint/AdamGameMode.AdamGameMode_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
