fix transparent material

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -104,8 +104,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="MenuDown",Key=S,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="MenuUp",Key=Gamepad_LeftStick_Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="MenuDown",Key=Gamepad_LeftStick_Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="ToggleInventory",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="ToggleInventory",Key=Gamepad_Special_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="ToggleInventory",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="AddHealth",Key=Gamepad_DPad_Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="AddHealth",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=MotionController_Left_Trigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -153,6 +155,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="MenuDown",Key=Gamepad_LeftStick_Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ToggleInventory",Key=Gamepad_Special_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ToggleInventory",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="AddHealth",Key=Gamepad_DPad_Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="AddHealth",Key=G,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
