fix doctor room issue

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,6 +9,7 @@ MinimumiOSVersion=IOS_8
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Psycho")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Psycho")
 bSubtitlesEnabled=True
+bSubtitlesForcedOff=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
