add another elevator, put it into the final hospital

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -41,13 +41,10 @@ bEncryptIniFiles=False
 bEncryptPakIndex=False
 bSkipEditorContent=False
 -MapsToCook=(FilePath="/Game/Prototype/Hospital")
--MapsToCook=(FilePath="/Game/Prototype/Floor1")
 -MapsToCook=(FilePath="/Game/Prototype/Floor2")
 -MapsToCook=(FilePath="/Game/Prototype/Title")
--MapsToCook=(FilePath="")
+-MapsToCook=(FilePath="/Game/Prototype/Battle")
 +MapsToCook=(FilePath="/Game/Prototype/Hospital")
-+MapsToCook=(FilePath="/Game/Prototype/Floor1")
-+MapsToCook=(FilePath="/Game/Prototype/Floor2")
 +MapsToCook=(FilePath="/Game/Prototype/Title")
 +MapsToCook=(FilePath="/Game/Prototype/Battle")
 bNativizeBlueprintAssets=False
