--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -84,7 +84,15 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 -PhysicalSurfaces=(Type=SurfaceType1,Name="Wood")
 -PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
+-PhysicalSurfaces=(Type=SurfaceType3,Name="Metal")
+-PhysicalSurfaces=(Type=SurfaceType4,Name="Water")
+-PhysicalSurfaces=(Type=SurfaceType5,Name="Grass")
+-PhysicalSurfaces=(Type=SurfaceType6,Name="Dirt")
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Wood")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Concrete")
++PhysicalSurfaces=(Type=SurfaceType3,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType4,Name="Water")
++PhysicalSurfaces=(Type=SurfaceType5,Name="Grass")
++PhysicalSurfaces=(Type=SurfaceType6,Name="Dirt")
 
 
