add survival mode

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -41,12 +41,11 @@ bEncryptIniFiles=False
 bEncryptPakIndex=False
 bSkipEditorContent=False
 -MapsToCook=(FilePath="/Game/Prototype/Hospital")
--MapsToCook=(FilePath="/Game/Prototype/Floor2")
 -MapsToCook=(FilePath="/Game/Prototype/Title")
 -MapsToCook=(FilePath="/Game/Prototype/Battle")
 +MapsToCook=(FilePath="/Game/Prototype/Hospital")
 +MapsToCook=(FilePath="/Game/Prototype/Title")
-+MapsToCook=(FilePath="/Game/Prototype/Battle")
++MapsToCook=(FilePath="/Game/Prototype/Hospital_Survival")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
