--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,7 +29,7 @@ MemoryBudgetMb=1024
 RuntimeGeneration=DynamicModifiersOnly
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Prototype/Hospital.Hospital
+EditorStartupMap=/Engine/Maps/Entry.Entry
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
