--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -42,10 +42,16 @@ bEncryptPakIndex=False
 bSkipEditorContent=False
 -MapsToCook=(FilePath="/Game/Prototype/Hospital")
 -MapsToCook=(FilePath="/Game/Prototype/Title")
--MapsToCook=(FilePath="/Game/Prototype/Battle")
+-MapsToCook=(FilePath="/Game/Prototype/Hospital_Survival")
+-MapsToCook=(FilePath="/Game/Scene/Hospital_CutScene1")
+-MapsToCook=(FilePath="/Game/Scene/NewSubway")
+-MapsToCook=(FilePath="/Game/Scene/NewSubway")
 +MapsToCook=(FilePath="/Game/Prototype/Hospital")
 +MapsToCook=(FilePath="/Game/Prototype/Title")
 +MapsToCook=(FilePath="/Game/Prototype/Hospital_Survival")
++MapsToCook=(FilePath="/Game/Scene/Hospital_CutScene1")
++MapsToCook=(FilePath="/Game/Scene/NewSubway")
++MapsToCook=(FilePath="/Game/Scene/NewSubway_Ending1")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
